fixed horizontal scroll

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -60,7 +60,6 @@ p {
     line-height: 22px;
     animation: typing 0.5s steps(30, end);
     white-space: nowrap;
-    overflow: hidden;
 }
 
 div {
